--- a/frontend/src/styles/pages/NotFoundPage.scss
+++ b/frontend/src/styles/pages/NotFoundPage.scss
@@ -1,14 +1,23 @@
 .NotFoundPage_Container {
-    width : 100%;
+    display: flex;
     height : 100vh;
-    margin : 0 auto;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.NotFoundPage_Wrapper {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .NotFoundPage_Text {
     width : 100%;
-    text-align: center;
+    // Text Decoration
     color: #000;
     font-family: Noto Sans KR;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 900;
+    text-align: center;
 }
