--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -1,10 +1,24 @@
 .Header_Container{
     display: flex;
-
-    width: 100%;
     height : 50px;
+    background-color: transparent;
 }
 
 .Header_Wrapper {
-    
+    display: flex;
+    flex-direction: row;
+    width : 100%;
+
+    align-items: center;
+    justify-content: center;
+}
+
+
+.Header_Img {
+    margin-left : 16px;
+    margin-right : 128px;
+}
+.Header_MenuIcon {
+    margin-right : 20px;
+    margin-left : 128px;
 }
