--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -1,23 +1,29 @@
 /* modal창 외부화면 */
 .Modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.87);
+
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 10px -5px, rgba(0, 0, 0, 0.14) 0px 16px 24px 2px, rgba(0, 0, 0, 0.12) 0px 6px 30px 5px;
+
+    overflow-y: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+
+    height: 100%;
+    flex: 1 0 auto;
+    z-index: 1200;
+
+    position: fixed;
+    top: 0px;
+    outline: 0px;
+    right: 0px;
   }
    
   /* modal창 */
   .modalBody {
-    position: absolute;
-    width: 300px;
+    width: 250px;
     height: 100vh;
-    left : 160px;
-    padding: 40px;
     text-align: center;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -30,8 +36,8 @@
     width: 36px;
     height: 36px;
 
-    top: 62px;
-    right: 330px;
+    top: 12px;
+    right: 200px;
     border: none;
     color: rgba(0, 0, 0, 0.7);
     background-color: transparent;
@@ -45,25 +51,49 @@
   .Modal_Text {
     position: absolute;
     display: flex;
+
     flex-direction: column;
     text-align: left;
 
-    top : 110px;
+    color: #212121;
+    font-family: Noto Sans KR;
+
+    top : 55px;
     left : 25px;
     .Modal_Text1{
-        color: #212121;
-        font-family: Noto Sans KR;
         font-size: 16px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 20px; /* 125% */
+        font-weight: 900;
     }
     .Modal_Text2{
-        color: #212121;
-        font-family: Noto Sans KR;
         font-size: 16px;
-        font-style: normal;
         font-weight: 500;
-        line-height: 20px;
+    }
+  }
+
+  .Modal_Horizon {
+    position: absolute;
+    top : 180px;
+    left : 10px;
+    width: 235px;
+    height: 1px;
+    background: #ACACAC;
+  }
+
+  .Modal_items {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+    color: #000;
+    font-family: Noto Sans KR;
+    font-size: 16px;
+    font-weight: 500;
+
+    top : 180px;
+    left : 25px;
+
+    .Modal_item {
+        margin-top : 31px;
     }
   }
