--- a/frontend/src/styles/components/common/Footer.scss
+++ b/frontend/src/styles/components/common/Footer.scss
@@ -1,27 +1,23 @@
-
-
 .Footer_Container {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height : 150px;
     align-items: center;
+    justify-content: center;
 }
+
 
 .uni_text,
 .Ls {
     width:100px;
     height:5px;
     padding-top:10px;
-    text-align: center;
     font-family: 'Noto Sans KR';
-    font-style: normal;
     font-weight: 400;
     font-size: 8px;
     line-height: 12px;
     text-align: center;
 
     color: #C9C9C9;
-}
-
-.FooterPosition {
-    margin:200px;
 }
