--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -3,11 +3,11 @@
     width : 100%;
     height : 90px;
 
-    position: fixed;
-    top : 0;
-    left : 0;
+    // position: fixed;
+    // top : 0;
+    // left : 0;
 
-    
+
     align-items: center;
     justify-content: center;
 }
