[YeonJae] Finish the Footer Component

--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -12,12 +12,13 @@
 
     height: 100%;
     flex: 1 0 auto;
-    z-index: 1200;
 
     position: fixed;
     top: 0px;
     outline: 0px;
     right: 0px;
+
+    overflow: auto;
   }
    
   /* modal창 */
@@ -96,10 +97,12 @@
   .Modal_Bottom_Wrapper{
     display: flex;
     flex-direction: row;
-    height: 204px;
 
     justify-content: center;
     align-items: center;
 
     margin: 0 auto;
+
+    position : fixed;
+    bottom : 0;
   }
