--- a/frontend/src/styles/components/CreatorPage/CreatorList.scss
+++ b/frontend/src/styles/components/CreatorPage/CreatorList.scss
@@ -66,7 +66,7 @@
     box-sizing: border-box;
     padding-bottom: 3rem;
     width: 375px;
-    height: 100px;
+    //height: 100px;
     margin: 0 auto;
     margin-top: 2rem;
 }
