--- a/frontend/src/styles/components/CreatorPage/CreatorList.scss
+++ b/frontend/src/styles/components/CreatorPage/CreatorList.scss
@@ -53,7 +53,7 @@
     color: #000000;
     margin-bottom: -2.5px;
     
-    border-bottom: 4px solid #424242;;
+    border-bottom: 4px solid var(--main, #4F75FF);;
   }
   
   
