[YeonJae] Header Design Edit

--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -20,6 +20,15 @@
     justify-content: center;
 }
 
+.Header_Props {
+    width: 90px;
+    max-width : 120px;
+    font-family: Noto Sans KR;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    margin-left : -45px;
+}
 
 .Header_Img {
     margin-left : 26px;
