--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -1,15 +1,23 @@
-.Header_Container{
+.Header_Container1{
     display: flex;
     width : 100%;
     height : 90px;
 
-    // position: fixed;
-    // top : 0;
-    // left : 0;
+    align-items: center;
+    justify-content: center;
+}
 
+.Header_Container2{
+    display: flex;
+    width : 100%;
+    height : 90px;
 
     align-items: center;
     justify-content: center;
+
+    position: fixed;
+    top: 0;
+    left : 0;
 }
 
 .Header_Wrapper {
