--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -32,7 +32,7 @@
             background-color: #D9D9D9;
             border-radius: 12px;
             
-
+            //이게맞을까?    
             // &:last-child {
             //     margin-right :3% ;
             // }
