--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -1,108 +1,112 @@
 /* modal창 외부화면 */
 .Modal {
-    background-color: rgb(255, 255, 255);
-    color: rgba(0, 0, 0, 0.87);
+  background-color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.87);
 
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 10px -5px, rgba(0, 0, 0, 0.14) 0px 16px 24px 2px, rgba(0, 0, 0, 0.12) 0px 6px 30px 5px;
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0px 8px 10px -5px,
+    rgba(0, 0, 0, 0.14) 0px 16px 24px 2px,
+    rgba(0, 0, 0, 0.12) 0px 6px 30px 5px;
 
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 
-    height: 100%;
-    flex: 1 0 auto;
+  height: 100%;
+  flex: 1 0 auto;
 
-    position: fixed;
-    top: 0px;
-    outline: 0px;
-    right: 0px;
+  position: fixed;
+  top: 0px;
+  outline: 0px;
+  right: 0px;
 
-    overflow: auto;
+  z-index: 1000; // 김승찬 추가
+  overflow: auto;
+}
+
+/* modal창 */
+.modalBody {
+  width: 300px;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+}
+
+#modalCloseBtn {
+  width: 36px;
+  height: 36px;
+  border: none;
+  color: rgba(0, 0, 0, 0.7);
+
+  background-color: transparent;
+  font-size: 30px;
+
+  margin-top: 32px;
+  margin-left: 14px;
+}
+
+#modalCloseBtn:hover {
+  cursor: pointer;
+}
+
+.Modal_Text {
+  display: flex;
+
+  flex-direction: column;
+  text-align: left;
+
+  color: #212121;
+  font-family: Noto Sans KR;
+
+  margin-top: 9px;
+  margin-left: 25px;
+  .Modal_Text1 {
+    font-size: 16px;
+    font-weight: 900;
   }
-   
-  /* modal창 */
-  .modalBody {
-    width: 300px;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-  }
-   
-  #modalCloseBtn {
-    width: 36px;
-    height: 36px;
-    border: none;
-    color: rgba(0, 0, 0, 0.7);
-
-    background-color: transparent;
-    font-size: 30px;
-
-    margin-top : 32px;
-    margin-left : 14px;
-  }
-   
-  #modalCloseBtn:hover {
-    cursor: pointer;
-  }
-
-  .Modal_Text {
-    display: flex;
-
-    flex-direction: column;
-    text-align: left;
-
-    color: #212121;
-    font-family: Noto Sans KR;
-
-    margin-top : 9px;
-    margin-left : 25px;
-    .Modal_Text1{
-        font-size: 16px;
-        font-weight: 900;
-    }
-    .Modal_Text2{
-        font-size: 16px;
-        font-weight: 500;
-    }
-  }
-
-  .Modal_Horizon {
-    width: 270px;
-    height: 1px;
-    background: #ACACAC;
-    margin-top : 58px;
-    margin-left : 15px;
-  }
-
-  .Modal_items {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-
-    color: #000;
-    font-family: Noto Sans KR;
+  .Modal_Text2 {
     font-size: 16px;
     font-weight: 500;
-
-    margin-top : 31px;
-    margin-left : 25px;
-
-    .Modal_item {
-        margin-bottom : 31px;
-    } 
   }
+}
 
-  .Modal_Bottom_Wrapper{
-    display: flex;
-    flex-direction: row;
+.Modal_Horizon {
+  width: 270px;
+  height: 1px;
+  background: #acacac;
+  margin-top: 58px;
+  margin-left: 15px;
+}
 
-    justify-content: center;
-    align-items: center;
+.Modal_items {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 
-    margin: 0 auto;
+  color: #000;
+  font-family: Noto Sans KR;
+  font-size: 16px;
+  font-weight: 500;
 
-    position : fixed;
-    bottom : 0;
+  margin-top: 31px;
+  margin-left: 25px;
+
+  .Modal_item {
+    margin-bottom: 31px;
   }
+}
+
+.Modal_Bottom_Wrapper {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  margin: 0 auto;
+
+  position: fixed;
+  bottom: 0;
+}
