--- a/frontend/src/styles/components/MainPage/MainView.scss
+++ b/frontend/src/styles/components/MainPage/MainView.scss
@@ -6,3 +6,11 @@
     background-image: url('../../../assets/MainBackground1.png');
     background-size: cover;
 }
+
+.MainView_TextBox {
+    color: #FFF;
+    font-family: Black Han Sans;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 22.075px; /* 50.172% */
+}
