--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
 
-    position: fixed;
+    position: absolute;
     top: 0;
     left : 0;
 }
