--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -1,14 +1,18 @@
+.EventView_Container {
+    display: flex;
+    width: 100%;
+    height: 50vh;
+    align-items: center;
+    justify-content: center;
+}
 .Event_Text {
-    /* 📢 이벤트 */
-    //width: 500px;
-    //height: 35px;
-
     overflow-x:scroll;
     scroll-snap-type: x mandatory;
-    justify-content: center;
-    align-items: center;
+    scroll-snap-align : start;
 
-    scroll-snap-align:start;
+    -ms-overflow-style: none; /* 인터넷 익스플로러 */
+    scrollbar-width: none; /* 파이어폭스 */
+
 
     font-family: 'Noto Sans KR';
     font-style: normal;
@@ -16,14 +20,17 @@
     font-size: 24px;
     line-height: 35px;
 
+    margin-left : 16px;
 
     color: #000000;
 
    .scroll-container {
         display: flex;
+        display: inline-flex;
+        align-items: flex-start;
+        gap: 14px;
 
         .event_box {
-            flex: 0 0 auto;
             width: 287px; // Adjust this to your needs
             height: 185px; // Adjust this to your needs
             margin-right: calc((100vw - 365px) / 2); // Add left and right margins
@@ -32,10 +39,10 @@
             background-color: #D9D9D9;
             border-radius: 12px;
             
-            //이게맞을까?제발그만하고싶어
-            // &:last-child {
-            //     margin-right :3% ;
-            // }
         }
     }
+}
+
+.Event_Text::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
 }
