--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -1,19 +1,50 @@
 .EventView_Container {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 50vh;
+
+    margin-top : 40px;
+}
+
+.EventView_Wrapper {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-.Event_Text {
+
+    display: flex;
     overflow-x:scroll;
     scroll-snap-type: x mandatory;
     scroll-snap-align : start;
+}
 
+.EventView_Slide {
+    width: 100%;
     -ms-overflow-style: none; /* 인터넷 익스플로러 */
     scrollbar-width: none; /* 파이어폭스 */
+}
+.event_box {
+    width: 287px; // Adjust this to your needs
+    height: 185px; // Adjust this to your needs
+    margin-right: calc((100vw - 365px) / 2); // Add left and right margins
+    margin-left: calc((100vw - 365px) / 2); // Add left and right margins
 
+    background-color: #D9D9D9;
+    border-radius: 12px;
 
+    text-align: center;
+    
+}
+
+.scroll-container {
+
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 14px;
+}
+
+.Event_Text {
     font-family: 'Noto Sans KR';
     font-style: normal;
     font-weight: 700;
@@ -23,26 +54,8 @@
     margin-left : 16px;
 
     color: #000000;
-
-   .scroll-container {
-        display: flex;
-        display: inline-flex;
-        align-items: flex-start;
-        gap: 14px;
-
-        .event_box {
-            width: 287px; // Adjust this to your needs
-            height: 185px; // Adjust this to your needs
-            margin-right: calc((100vw - 365px) / 2); // Add left and right margins
-            margin-left: calc((100vw - 365px) / 2); // Add left and right margins
-
-            background-color: #D9D9D9;
-            border-radius: 12px;
-            
-        }
-    }
 }
 
-.Event_Text::-webkit-scrollbar {
+.EventView_Wrapper::-webkit-scrollbar {
     display: none; /* 크롬, 사파리, 오페라, 엣지 */
 }
