--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -1,5 +1,6 @@
 .Header_Container1{
     display: flex;
+    overflow: hidden;
     width : 100%;
     height : 90px;
 
@@ -35,7 +36,7 @@
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-    margin-left : -45px;
+    margin-left : -65px;
 }
 
 .Header_Img {
