--- a/frontend/src/styles/components/MainPage/TimelineView.scss
+++ b/frontend/src/styles/components/MainPage/TimelineView.scss
@@ -1,6 +1,7 @@
 .TimelineView_Container {
     width: 100%;
-    height: 50vw;
+    height: 50vh;
+    overflow-x: hidden ;
 
     display: flex;
 }
@@ -8,11 +9,16 @@
 .TimelineView_Wrapper {
     display: flex;
     flex-direction: column;
+    margin-right: auto;
+    height: 50vh;
 }
 
 .TimelineView_TextBox {
     display: flex;
+    width: 100vw;
     flex-direction: row;
+    align-items: center;
+    
 }
 .TimelineView_Text {
     color: #000;
@@ -21,4 +27,18 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+
+    text-align: center;
+}
+
+.TimelineView_Box {
+    width: 93vw;
+    height: 175px;
+    border-radius: 12px;
+    background: #D9D9D9;
+
+    margin-top : 10px;
+    margin-left: 14px;
+
+    text-align: center;
 }
