--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -27,8 +27,8 @@
 .event_box {
     width: 287px; // Adjust this to your needs
     height: 185px; // Adjust this to your needs
-    margin-right: calc((100vw - 365px) / 2); // Add left and right margins
-    margin-left: calc((100vw - 365px) / 2); // Add left and right margins
+    margin-right: auto;
+    margin-left: 7px;
 
     background-color: #D9D9D9;
     border-radius: 12px;
