--- a/frontend/src/styles/components/MainPage/TimelineView.scss
+++ b/frontend/src/styles/components/MainPage/TimelineView.scss
@@ -1,7 +1,6 @@
 .TimelineView_Container {
     width: 100%;
     height: 50vh;
-    overflow-x: hidden ;
 
     display: flex;
 }
@@ -16,6 +15,7 @@
 .TimelineView_TextBox {
     display: flex;
     width: 100vw;
+    max-width: 450px;
     flex-direction: row;
     align-items: center;
     
@@ -33,6 +33,7 @@
 
 .TimelineView_Box {
     width: 93vw;
+    max-width: 420px;
     height: 175px;
     border-radius: 12px;
     background: #D9D9D9;
