--- a/frontend/src/styles/components/MainPage/CreatorView.scss
+++ b/frontend/src/styles/components/MainPage/CreatorView.scss
@@ -13,7 +13,7 @@
         display: flex;
 
         .creator_box {
-            flex: 20 20 auto;
+            //flex: 20 20 auto;
             width: 287px; 
             height: 185px; 
             margin-right: calc((100vw - 365px) / 2); 
