--- a/frontend/src/styles/components/MainPage/CreatorView.scss
+++ b/frontend/src/styles/components/MainPage/CreatorView.scss
@@ -1,3 +1,10 @@
+.CreatorView_Container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50vh;
+    margin-bottom: 193px;
+}
 .Creator_Text {
 
     font-family: 'Noto Sans KR';
