--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -3,6 +3,7 @@
 
     width : 100%;
     height : 90px;
+    overflow-x: hidden;
 
     align-items: center;
     justify-content: center;
@@ -12,6 +13,8 @@
     display: flex;
     width : 100%;
     height : 90px;
+
+    overflow-x: hidden;
 
     align-items: center;
     justify-content: center;
