--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -1,9 +1,10 @@
-// door.scss
+// src/components/container/InformationPage/informationfcn.scss
 $primaryColor: #5eb6f6;
 
 .informaion-container {
   z-index: 500;
 }
+
 .body-container {
   display: flex;
   flex-direction: column;
@@ -16,7 +17,7 @@ $primaryColor: #5eb6f6;
   justify-content: center;
   width: 100%;
   // width: 363px;
-  height: 175px;
+  height: 200px;
   margin-top: 0.7rem;
   .overlay-div-container {
     position: absolute;
@@ -31,142 +32,155 @@ $primaryColor: #5eb6f6;
     align-items: center;
 
     /* 여기서부터 내부 텍스트 스타일 */
-    .tag-div1 {
-      position: absolute;
-      top: 111px;
-      left: 39px;
-      background-color: #fdf3d1;
-      width: 21px;
-      height: 34px;
-      &.active {
-        background-color: red;
+
+    &.design {
+      // design 버튼이 active일 때만 적용되는 스타일
+      .tag-div1 {
+        // 디자인대학에 해당하는 tag-div 스타일
+      }
+
+      .tag-div2 {
+        // 디자인대학에 해당하는 tag-div 스타일
       }
     }
-    .tag-div2 {
-      position: absolute;
-      top: 72px;
-      left: 39px;
-      background-color: #fdf3d1;
-      width: 21px;
-      height: 34px;
-      &.active {
-        background-color: red;
+    &.gate {
+      .tag-div1 {
+        position: absolute;
+        top: 111px;
+        left: 39px;
+        background-color: #fdf3d1;
+        width: 21px;
+        height: 34px;
+        &.active {
+          background-color: red;
+        }
       }
-    }
-    .tag-div3 {
-      position: absolute;
-      top: 48px;
-      left: 60px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
-
-      &.active {
-        background-color: red;
+      .tag-div2 {
+        position: absolute;
+        top: 72px;
+        left: 39px;
+        background-color: #fdf3d1;
+        width: 21px;
+        height: 34px;
+        &.active {
+          background-color: red;
+        }
       }
-    }
+      .tag-div3 {
+        position: absolute;
+        top: 48px;
+        left: 60px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-    .tag-div4 {
-      position: absolute;
-      top: 48px;
-      left: 99px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
-
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div5 {
-      position: absolute;
-      top: 48px;
-      left: 137px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
+      .tag-div4 {
+        position: absolute;
+        top: 48px;
+        left: 99px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div6 {
-      position: absolute;
-      top: 48px;
-      left: 175px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
+      .tag-div5 {
+        position: absolute;
+        top: 48px;
+        left: 137px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div7 {
-      position: absolute;
-      top: 48px;
-      left: 214px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
+      .tag-div6 {
+        position: absolute;
+        top: 48px;
+        left: 175px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div8 {
-      position: absolute;
-      top: 72px;
-      left: 243px;
-      background-color: #fdf3d1;
-      width: 21px;
-      height: 34px;
+      .tag-div7 {
+        position: absolute;
+        top: 48px;
+        left: 214px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div9 {
-      position: absolute;
-      top: 111px;
-      left: 243px;
-      background-color: #fdf3d1;
-      width: 21px;
-      height: 34px;
+      .tag-div8 {
+        position: absolute;
+        top: 72px;
+        left: 243px;
+        background-color: #fdf3d1;
+        width: 21px;
+        height: 34px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div10 {
-      position: absolute;
-      top: 140px;
-      left: 280px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
+      .tag-div9 {
+        position: absolute;
+        top: 111px;
+        left: 243px;
+        background-color: #fdf3d1;
+        width: 21px;
+        height: 34px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
       }
-    }
 
-    .tag-div11 {
-      position: absolute;
-      top: 140px;
-      left: 320px;
-      background-color: #fdf3d1;
-      width: 34px;
-      height: 21px;
+      .tag-div10 {
+        position: absolute;
+        top: 140px;
+        left: 280px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
 
-      &.active {
-        background-color: red;
+        &.active {
+          background-color: red;
+        }
+      }
+
+      .tag-div11 {
+        position: absolute;
+        top: 140px;
+        left: 320px;
+        background-color: #fdf3d1;
+        width: 34px;
+        height: 21px;
+
+        &.active {
+          background-color: red;
+        }
       }
     }
   }
