--- a/frontend/src/components/container/InformationPage/Designfcn.scss
+++ b/frontend/src/components/container/InformationPage/Designfcn.scss
@@ -86,3 +86,194 @@
         line-height: normal;
     }
 }
+
+.image4 {
+    position: absolute;
+    left: -12px;
+    top: 105px;
+    width: 89px;
+    height: 24px;
+    transform: rotate(90deg);
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #2757ff;
+    background: #f2f5ff;
+
+    display: flex;
+    justify-content: center; // 가로축 중앙정렬
+    align-items: center; // 세로축 중앙정렬
+
+    .building-name {
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+        transform: rotate(270deg);
+        color: #4f75ff;
+        text-align: center;
+        font-family: "Spoqa Han Sans Neo";
+        font-size: 11.592px;
+        font-weight: 500;
+    }
+}
+
+.image5 {
+    position: absolute;
+    left: 70px;
+    top: 110px;
+    width: 242px;
+    height: 23px;
+    flex-shrink: 0;
+    border: 1px solid #ccdae3;
+    background: rgba(204, 218, 227, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .building-name {
+        color: #7e7e7e;
+        font-family: Spoqa Han Sans Neo;
+        font-size: 11.592px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+}
+
+.image6 {
+    position: absolute;
+    left: 300px;
+    top: 110px;
+    width: 89px;
+    height: 24px;
+    transform: rotate(90deg);
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #2757ff;
+    background: #f2f5ff;
+
+    display: flex;
+    justify-content: center; // 가로축 중앙정렬
+    align-items: center; // 세로축 중앙정렬
+
+    .building-name {
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+        transform: rotate(270deg);
+        color: #4f75ff;
+        text-align: center;
+        font-family: "Spoqa Han Sans Neo";
+        font-size: 11.592px;
+        font-weight: 500;
+    }
+}
+
+.image7 {
+    position: absolute;
+    width: 335px;
+    height: 33px;
+    left: 22px;
+    top: 180px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #ccdae3;
+    background: #f0f4f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .building-name {
+        color: #7e7e7e;
+        font-family: Spoqa Han Sans Neo;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+}
+
+.booth {
+    position: absolute;
+    width: 15px;
+    height: 25px;
+    flex-shrink: 0;
+    border: 1px solid #2757ff;
+
+    &.booth1 {
+        left: 70px;
+        top: 74px;
+        border-radius: 4px 0px 0px 4px;
+        background: #d1dbff;
+    }
+
+    &.booth2 {
+        left: 89px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth3 {
+        left: 108px;
+        top: 74px;
+        background: #d1dbff;
+    }
+
+    &.booth4 {
+        left: 127px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth5 {
+        left: 142px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth6 {
+        left: 161px;
+        top: 74px;
+        background: #d1dbff;
+    }
+
+    &.booth7 {
+        left: 180px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth8 {
+        left: 199px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth9 {
+        left: 218px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth10 {
+        left: 237px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth11 {
+        left: 256px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth12 {
+        left: 275px;
+        top: 74px;
+        background: #f2f5ff;
+    }
+
+    &.booth13 {
+        left: 294px;
+        top: 74px;
+        border-radius: 0px 4px 4px 0px;
+        background: #f2f5ff;
+    }
+}
