--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -25,7 +25,7 @@ $primaryColor: #5eb6f6;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5); // 반투명 배경으로 확인 용이하게 함.
+    // background-color: rgba(255, 255, 255, 0.5); // 반투명 배경으로 확인 용이하게 함.
 
     display: flex;
     justify-content: center;
