--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -7,6 +7,10 @@
 
     align-items: center;
     justify-content: center;
+
+    color : white;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 16px;
 }
 
 .Header_Container2{
@@ -39,11 +43,12 @@
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-    margin-left : -65px;
+    margin-left : - 60px;
+    margin-right : -30px;
 }
 
 .Header_Img {
-    margin-left : 26px;
+    margin-left : 15px;
     margin-right : 118px;
 }
 .Header_MenuIcon {
