--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -237,13 +237,13 @@ $primaryColor: #5eb6f6;
 }
 
 .filter-title {
-  color: #929292;
-  font-family: Pretendard;
+  color: #505050;
+  font-family: Spoqa Han Sans Neo;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding-left: 16px;
+  // padding-left: 16px;
 }
 
 .filter-tags {
