--- a/frontend/src/styles/components/MainPage/MainView.scss
+++ b/frontend/src/styles/components/MainPage/MainView.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height : 100vh;
-    background-image: url('../../../assets/MainBackground1.png');
+    background-image: url('../../../assets/MainPage/MainBackground1.png');
     background-size: cover;
 }
 
