--- a/frontend/src/styles/components/MainPage/CreatorView.scss
+++ b/frontend/src/styles/components/MainPage/CreatorView.scss
@@ -4,6 +4,7 @@
     width: 100%;
     height: 50vh;
     margin-bottom: 193px;
+    
 }
 .Creator_Text {
 
@@ -19,14 +20,16 @@
 
 .creator_box {
     display: flex;
-    // flex : auto;
-    width: 30vw; 
-    height: 185px; 
 
-    margin-left : 7px;
+    width: 30vw; 
+    height: 175px; 
+
+    margin-left : auto;
     margin-right : auto;
-    background-color: #D9D9D9;
-    border-radius: 12px;
+
+    border-radius: 16px;
+    border: 1px solid #EBEAEA;
+    background: var(--unnamed, linear-gradient(180deg, rgba(255, 255, 255, 0.20) 10%, rgba(0, 0, 0, 0.50) 100%));
 }
 
 .creator_box_container {
