--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -14,9 +14,6 @@
     justify-content: center;
 
     display: flex;
-    overflow-x:scroll;
-    scroll-snap-type: x mandatory;
-    scroll-snap-align : start;
 }
 
 .EventView_Slide {
@@ -24,25 +21,7 @@
     -ms-overflow-style: none; /* 인터넷 익스플로러 */
     scrollbar-width: none; /* 파이어폭스 */
 }
-.event_box {
-    width: 287px; // Adjust this to your needs
-    height: 185px; // Adjust this to your needs
-    margin-right: auto;
-    margin-left: 7px;
 
-    background-color: #D9D9D9;
-    border-radius: 12px;
-
-    text-align: center;
-    
-}
-
-.scroll-container {
-
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 14px;
-}
 
 .Event_Text {
     font-family: 'Noto Sans KR';
@@ -56,6 +35,26 @@
     color: #000000;
 }
 
-.EventView_Wrapper::-webkit-scrollbar {
+.scroll-container::-webkit-scrollbar {
     display: none; /* 크롬, 사파리, 오페라, 엣지 */
+}
+
+.scroll-container {
+    display: flex;
+    overflow-x: scroll;
+    align-items: center;
+    margin-left : 17px;
+
+    scroll-snap-type: x mandatory;
+    scroll-padding-left: 50px;
+    scroll-padding-right: 50px;
+}
+
+.event_box {
+    width: 287px; // Adjust this to your needs
+    height: 185px; // Adjust this to your needs
+    background-color: #D9D9D9;
+    border-radius: 12px;
+    margin-right : 17px;
+    scroll-snap-align: start;
 }
