--- a/frontend/src/styles/components/TimelinePage/ComponentAssembly.scss
+++ b/frontend/src/styles/components/TimelinePage/ComponentAssembly.scss
@@ -4,7 +4,13 @@
     width: 100%;
     height : 100vh;
 
+    background: var(--main, #4F75FF);
+}
+
+.ComponentAssembly_Wrapper {
+    width: 100%;
+    height : 100vh;
+
     background-color: #fff;
-    border-radius: 40px 40px 0px 0px;
-    border : 1px solid black;
+    border-radius: 40px 40px 0 0;
 }
