--- a/frontend/src/styles/components/common/Menu.scss
+++ b/frontend/src/styles/components/common/Menu.scss
@@ -98,6 +98,12 @@
       line-height: 30px; /* 187.5% */
       margin-left : 8px;
     }
+
+    .Airplane {
+      position: absolute;
+      top : 149px;
+      left : 100px;
+    }
   }
 }
 
@@ -121,19 +127,58 @@
     margin-bottom: 31px;
     .Modal_item_direction {
       margin-left : auto;
+      color: #B6B6B6;
     }
   }
 }
 
 .Modal_Bottom_Wrapper {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-
-  justify-content: center;
-  align-items: center;
-
-  margin: 0 auto;
-
+  flex-direction: column;
   position: fixed;
   bottom: 0;
+}
+
+.Modal_Bottom_Content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  margin-left : 17px;
+
+  .Festival {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .Detail {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.Modal_Bottom_Title {
+  color: #696969;
+  font-family: Spoqa Han Sans Neo;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top : 37px;
+  margin-bottom : 12px;
+}
+
+.Modal_Bottom_Text {
+  color: #ACACAC;
+  font-family: Spoqa Han Sans Neo;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 116.667% */
+  margin-left : 10px;
 }
