--- a/frontend/src/styles/components/MainPage/EventView.scss
+++ b/frontend/src/styles/components/MainPage/EventView.scss
@@ -36,6 +36,7 @@
 .scroll-container {
     display: flex;
     overflow-x: scroll;
+    overflow-y: hidden;
     align-items: center;
     margin-left : 17px;
 
