--- a/frontend/src/styles/components/TimelinePage/ComponentAssembly.scss
+++ b/frontend/src/styles/components/TimelinePage/ComponentAssembly.scss
@@ -2,15 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height : 100vh;
 
     background: var(--main, #4F75FF);
 }
 
 .ComponentAssembly_Wrapper {
     width: 100%;
-    height : 100vh;
-
+    margin-top : 10px;
     background-color: #fff;
     border-radius: 40px 40px 0 0;
 }
