--- a/frontend/src/styles/components/TimelinePage/DetailTable1.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailTable1.scss
@@ -69,6 +69,9 @@
 .DetailTable1_InformationList{
     display: flex;
     flex-direction: column;
+
+    margin-top : 103px;
+    margin-left : 49px;
 }
 
 .InformationList_Title {
