--- a/frontend/src/components/container/InformationPage/informationfcn.scss
+++ b/frontend/src/components/container/InformationPage/informationfcn.scss
@@ -212,6 +212,7 @@ $primaryColor: #5eb6f6;
 
       &.active {
         color: var(--main, #4f75ff);
+        text-decoration: none;
       }
     }
 
